Implemented the basics of the ui and the get chats method; new update to open api json to cover the get chats backend method
