# lvc-ui/src/app/services/models.ts
@@ -2,6 +2,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { ChatResponse } from './models/chat-response';
 export type { CreateGroupChatRequest } from './models/create-group-chat-request';
 export type { FriendshipRequestDto } from './models/friendship-request-dto';
 export type { FriendshipResponseDto } from './models/friendship-response-dto';
