# lvc-ui/src/app/services/models/chat-response.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface ChatResponse {
+  id?: number;
+  lastMessage?: string;
+  lastMessageTime?: string;
+  name?: string;
+  receiverId?: string;
+  recipientOnline?: boolean;
+  senderId?: string;
+  unreadCount?: number;
+}
