# lvc-ui/src/openapi/openapi.json
@@ -635,6 +635,29 @@
         }
       }
     },
+    "/chats": {
+      "get": {
+        "tags": [
+          "Chat"
+        ],
+        "operationId": "getChatsByReceiver",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChatResponse"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/users": {
       "get": {
         "tags": [
@@ -849,6 +872,38 @@
           }
         }
       },
+      "ChatResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "name": {
+            "type": "string"
+          },
+          "unreadCount": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "lastMessage": {
+            "type": "string"
+          },
+          "lastMessageTime": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "senderId": {
+            "type": "string"
+          },
+          "receiverId": {
+            "type": "string"
+          },
+          "recipientOnline": {
+            "type": "boolean"
+          }
+        }
+      },
       "UserResponse": {
         "type": "object",
         "properties": {
@@ -878,11 +933,11 @@
       }
     },
     "securitySchemes": {
-      "bearerAuth": { "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
-      },
-      "keycloak": {
+        "bearerAuth": { "type": "http",
+          "scheme": "bearer",
+          "bearerFormat": "JWT"
+        },
+        "keycloak": {
         "type": "oauth2",
         "in": "header",
         "scheme": "bearer",
